@@ -54,7 +54,9 @@ aliasProperties.image=aliasProperties.gif
 logs.image=logs.gif
 
 find.image=find.gif
+
 findColumn.image=findColumn.png
+duplicate.image=duplicate.png
 
 Credits.file=credits.html
 
@@ -591,25 +593,25 @@ action.net.sourceforge.squirrel_sql.client.session.action.UndoAction.image=
 action.net.sourceforge.squirrel_sql.client.session.action.UndoAction.name=Undo
 action.net.sourceforge.squirrel_sql.client.session.action.UndoAction.tooltip=Undo
 
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CloseAction.image=jc/close.gif
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CloseAction.name=Close
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CloseAction.tooltip=Close Tab
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CloseAction.image=jc/close.gif
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CloseAction.name=Close
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CloseAction.tooltip=Close Tab
 
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CreateResultTabFrameAction.image=tab-detach.png
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CreateResultTabFrameAction.name=Pop
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$CreateResultTabFrameAction.tooltip=Show results in new window
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CreateResultTabFrameAction.image=tab-detach.png
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CreateResultTabFrameAction.name=Pop
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.CreateResultTabFrameAction.tooltip=Show results in new window
 
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$RerunAction.image=eclipse/active/run_exc.gif
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$RerunAction.name=Rerun
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$RerunAction.tooltip=Rerun this tab's SQL Query
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindInResultAction.image=find.gif
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindInResultAction.name=Find in result
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindInResultAction.tooltip=Find in this tab's result
 
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindInResultAction.image=find.gif
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindInResultAction.name=Find in result
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindInResultAction.tooltip=Find in this tab's result
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindColumnAction.image=findColumn.png
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindColumnAction.name=Find column
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.FindColumnAction.tooltip=Find column
 
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindColumnAction.image=findColumn.png
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindColumnAction.name=Find column
-action.net.sourceforge.squirrel_sql.client.session.mainpanel.ResultTab$FindColumnAction.tooltip=Find column
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.MarkDuplicatesToggleAction.image=duplicate.png
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.MarkDuplicatesToggleAction.name=Mark duplicate values in columns
+action.net.sourceforge.squirrel_sql.client.session.mainpanel.resulttabactions.MarkDuplicatesToggleAction.tooltip=Mark duplicate values in columns
 
 action.net.sourceforge.squirrel_sql.client.session.mainpanel.ErrorPanel$CloseAction.image=jc/close.gif
 action.net.sourceforge.squirrel_sql.client.session.mainpanel.ErrorPanel$CloseAction.name=Close
